# Aiogram_Calendar

./: .gitignore  README.md  lite_config.ini  loader.py  main.py  main_GPT.py  requirements.txt
config_data/: TestParser.py  bot_config.py  calendar_config.py
keyboards/: __init__.py  cal_keys.py  inline_calendar.py  lang.json  lang.py
lite_calendar/: LICENSE  README.md  pyproject.toml  run_current.py
lite_calendar/lite_calendar/: __init__.py  base_calendar.py  calendar_builder.py  factory.py  full_picker.py  lite_config.ini  mini_picker.py  picker_config.py
lite_calendar/lite_calendar/config/: __init__.py  lite_config.ini  picker_config.py
lite_calendar/lite_calendar/core/: __init__.py  base_calendar.py  build_full.py  build_mini.py
lite_calendar/lite_calendar/misc/: lang.json
lite_calendar/lite_calendar/utils/: __init__.py  picker_factory.py  picker_utils.py
